Fixed mobile header visibility issues when active

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -66,7 +66,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 1024px) {
   .desktop-menu,
-  .navbar-alt-wrapper {
+  .navbar__header {
     display: none;
   }
 
@@ -75,7 +75,7 @@
     flex-direction: column;
     position: absolute;
     z-index: 2;
-    top: 10;
+    top: 0;
     left: 0;
   }
 }
@@ -89,7 +89,7 @@
     background: #fff;
   }
 
-  .navbar-alt-wrapper {
+  .navbar__header {
     display: flex;
     flex-direction: column;
   }
